Alignment problem in grid panels on FF fixed
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi@8093 99afaf0d-6903-0410-885a-c66a8bbb5f81

--- a/V2.x/trunk/SpagoBIProject/web-content/js/src/ext/sbi/overrides/overrides.css
+++ b/V2.x/trunk/SpagoBIProject/web-content/js/src/ext/sbi/overrides/overrides.css
@@ -20,3 +20,7 @@ http://extjs.com/forum/showthread.php?p=282928#post282928
 	width:200px; /* IE */
 }
 
+/* fixes the alignment problem in grid panels on FF */
+.x-grid3 table {
+    table-layout:fixed;
+}
